just added a confirm button

--- a/MAFIA43/app/src/main/res/values/strings.xml
+++ b/MAFIA43/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <!-- This string will have to be dynamic as days change -->
     <string name="day_num">DAY 1</string>
     <string name="vote_selection">Select who the group has decided to vote off:</string>
+    <string name="confirm_vote">CONFIRM</string>
 
     <!-- Description of UI images -->
     <string name="divider">divider</string>
