Added night activity, Added option in temp to go to night, tried to merge code

--- a/MAFIA43/app/src/main/res/values/strings.xml
+++ b/MAFIA43/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
 
     <string name="restart">Restart Game</string>
 
+    <string name="night">NIGHT</string>
+    <string name="night_role">ROLE</string>
+
     <string name="voting">VOTING</string>
     <!-- This string will have to be dynamic as days change -->
     <string name="day_num">DAY 1</string>
